@@ -2,7 +2,7 @@
 # Autoconf/automake.
 # -------------------------------------------------------------------------------
 AC_PREREQ([2.5])
-AC_INIT([clipit], [1.3.13], [oss@rspwn.com])
+AC_INIT([clipit], [1.4.0], [oss@rspwn.com])
 AM_INIT_AUTOMAKE([AC_PACKAGE_TARNAME()], [AC_PACKAGE_VERSION()])
 
 AC_CONFIG_MACRO_DIR([m4])
@@ -37,7 +37,7 @@ APPINDICATOR_REQUIRED_VERSION=0.2.4
 AC_ARG_ENABLE([appindicator],
 	AS_HELP_STRING([--enable-appindicator[=@<:@no/auto/yes@:>@]],[Build support for application indicators]),
 	[enable_appindicator=$enableval],
-	[enable_appindicator="no"])
+	[enable_appindicator="auto"])
 
 
 if test x$enable_appindicator = xauto ; then
